--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!--  TODO: [Define the required permissions](https://developer.android.com/develop/connectivity/network-ops/connecting)  -->
+    <!--  DONE: [Define the required permissions](https://developer.android.com/develop/connectivity/network-ops/connecting)  -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!--  DONE: [Specify application class](https://developer.android.com/reference/android/app/Application)  -->
